# EDA-agent

./: .env.example  .gitignore  README.md  note.md  pyproject.toml  requirements.txt
api/: __init__.py  agui_events.py  main.py  stream_handler.py
config/: __init__.py  settings.py
docs/: text_to_sql_walkthrough.md
metadata/domains/: joins.yaml
mock_data/: README.md  generate_mock_data.py  lakehouse.cdp_mart.cdp_camp_conversion_stage.csv  lakehouse.cdp_mart.dim_campaign.csv  lakehouse.lh_vnfilm_v2.bank.csv  lakehouse.lh_vnfilm_v2.bank_seat_definition.csv  lakehouse.lh_vnfilm_v2.cinema.csv  lakehouse.lh_vnfilm_v2.cinema_favourite.csv  lakehouse.lh_vnfilm_v2.concession.csv  lakehouse.lh_vnfilm_v2.customer_tracking.csv  lakehouse.lh_vnfilm_v2.film.csv  lakehouse.lh_vnfilm_v2.locations.csv  lakehouse.lh_vnfilm_v2.notify_email.csv  lakehouse.lh_vnfilm_v2.notify_ott.csv  lakehouse.lh_vnfilm_v2.notify_sms.csv  lakehouse.lh_vnfilm_v2.order_concession.csv  lakehouse.lh_vnfilm_v2.order_film.csv  lakehouse.lh_vnfilm_v2.order_refund.csv  lakehouse.lh_vnfilm_v2.order_seat.csv  lakehouse.lh_vnfilm_v2.orders.csv  lakehouse.lh_vnfilm_v2.pre_order.csv  lakehouse.lh_vnfilm_v2.pre_order_concession.csv  lakehouse.lh_vnfilm_v2.pre_order_concession_map.csv  lakehouse.lh_vnfilm_v2.pre_order_customer.csv  lakehouse.lh_vnfilm_v2.pre_order_map.csv  lakehouse.lh_vnfilm_v2.pre_order_seat.csv  lakehouse.lh_vnfilm_v2.sessions.csv  lakehouse.lh_vnfilm_v2.vendor.csv  lakehouse.lh_vnfilm_v2.vendor_bank.csv
scripts/: README.md  build_neo4j_graph.py  index_embeddings.py  load_csv_to_postgres.py  test_context_fusion.py  test_session_subgraph.py
scripts/setup/: create_fulltext_indexes.py
scripts/test/: test_context_fusion.py  test_full_flow.py  test_full_flow_node.py  test_planner_critic_loop.py  test_planner_integration.py  test_redis_cache.py  (+5 more)
src/: __init__.py  cache.py  metadata_enricher.py
(+88 files in other folders)
